parslers-benchmark/src/tests/invalid/semanticErr/expressions/mixedOpTypeErr.wacc
# expresission type mismatch bool->int

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  int b = 1 + 2 + true + 4 + 5
end
